--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wlanpi-wconsole (1.0.0-4) UNRELEASED; urgency=medium
+
+  * Remove usb0 config, re-org files to prevent dup etc folder, add docs
+
+ -- Nigel Bowden <wifinigel@gmail.com>  Sat, 01 Jan 2022 14:41:49 +0000
+
 wlanpi-wconsole (1.0.0-3) UNRELEASED; urgency=medium
 
   * Fix packaging issues, fix various changes for new version of hostapd, add quickstart script.
