--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+wlanpi-wconsole (1.0.2) unstable; urgency=medium
+
+  * Enables BSS Load which advertises the number of connected clients
+  * Uses the same channel 6 as Hotspot mode
+
+ -- Jiri Brejcha <jirka@jiribrejcha.net>  Tue, 18 Jan 2022 20:29:00 +0000
+
 wlanpi-wconsole (1.0.1) unstable; urgency=medium
 
   * Update docs to split out userguide & inc quickstart
