--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-wlanpi-wconsole (1.0.6) unstable; urgency=medium
+wlanpi-wconsole (1.0.6-1) unstable; urgency=medium
 
   * Generates random WPA2 passphrase
 
