--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+wlanpi-wconsole (1.0.8) unstable; urgency=medium
+
+  * Remove visually similar chars from pseudo random password
+    (0,1,i,l,o,I,L,O).
+
+ --  Josh Schmelzle <josh@joshschmelzle.com>  Sat, 12 Feb 2022 13:00:34 -0500
+
 wlanpi-wconsole (1.0.7) unstable; urgency=medium
 
   * Add checks for factory default SSID and PSK
