--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wlanpi-wconsole (1.0.12) unstable; urgency=medium
+
+  * Fixed: Wi-Fi Console mode doesn't broadcast SSID
+
+ -- Jiri Brejcha <jirka@jiribrejcha.net>  Mon, 06 Jun 2022 14:30:00 +0000
+
 wlanpi-wconsole (1.0.11) unstable; urgency=medium
   
   * Revert changes introduced in 1.0.10
