--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wlanpi-wconsole (2.0.0) unstable; urgency=medium
+
+  * Move to networkd support
+
+ -- Nigel Bowden <wifinigel@gmail.com>  Sat, 13 Aug 2022 18:10:33 +0000
+
 wlanpi-wconsole (1.0.13-4) unstable; urgency=medium
 
   * ser2net is now working again and uses our config /etc/ser2net.conf, switch to YAML format at some point later
