--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+wlanpi-wconsole (1.0.14) unstable; urgency=medium
+
+  * Use 5 GHz channel 36 by default
+
+ -- Jiri Brejcha <jirka@jiribrejcha.net>  Mon, 09 Oct 2023 23:33:00 +0000
+
 wlanpi-wconsole (1.0.13-4) unstable; urgency=medium
 
   * ser2net is now working again and uses our config /etc/ser2net.conf, switch to YAML format at some point later
