--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-wlanpi-wconsole (1.0.15) unstable; urgency=medium
+wlanpi-wconsole (1.0.16) unstable; urgency=medium
 
-   * Sync hotspot and wconsole passphrases, they both use the same SSID
+  * Sync hotspot and wconsole passphrases, they both use the same SSID
+  * Fixed: Leading - character in passphrase broke hostapd
 
-  -- Jiri Brejcha <jirka@jiribrejcha.net>  Fri, 13 Oct 2023 07:33:00 +0000
+ -- Jiri Brejcha <jirka@jiribrejcha.net>  Fri, 13 Oct 2023 07:33:00 +0000
 
 wlanpi-wconsole (1.0.14) unstable; urgency=medium
 
