--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+wlanpi-wconsole (1.0.19) unstable; urgency=medium
+  
+  * Fixed: Mode switching fails due to missing directory /etc/hostapd
+  * Fixed: 2 incompatible configuration lines in /etc/hostapd/hostapd.conf
+ 
+ -- Jiri Brejcha <jirka@jiribrejcha.net>  Tue, 18 Feb 2025 20:25:00 +0000
+
 wlanpi-wconsole (1.0.18) unstable; urgency=medium
 
   * Now uses 2.4 GHz channel 1 instead of channel 36 which has NO-IR flag on Intel adapters
